Update loadMap, Oneal
loadMap: khởi tạo bomber lên đầu class, cho bomber là static